renamed inc sass files with _ prefix

--- a/screen.sass
+++ b/screen.sass
@@ -61,16 +61,15 @@
   :position absolute
   :left -1000em
 
-
 // Eric Mayer reset
 // http://meyerweb.com/eric/tools/css/reset/
-@import inc/reset.sass
+@import inc/_reset.sass
 
 // default styles
-@import inc/default.sass
+@import inc/_default.sass
 
 // common elements
-@import inc/common.sass
+@import inc/_common.sass
 
 // layout
-@import inc/layout.sass
+@import inc/_layout.sass
