--- a/inc/_variables.sass
+++ b/inc/_variables.sass
@@ -16,5 +16,5 @@
 // default colorscheme
 !cs_d   = #333      
 !cs_h   = #111       
-!cs_a   = #ff6600   
-!cs_ah  = #000      
+!cs_a   = #666666  
+!cs_ah  = #999   
