--- a/inc/_default.sass
+++ b/inc/_default.sass
@@ -2,7 +2,7 @@ html
   :font-size medium
 
 body
-  :background #000
+  :background #FFF
   :color = !cs_d
   :font 
     :weight normal
@@ -12,21 +12,25 @@ body
   :line-height = !lh
   :text-align center
 
+
+// headings
 h1, h2, h3, h4
+  :margin 1em 0 0
   :color = !cs_h
   :font-family = !ff_h
   :font-weight normal
 
 h1
-  :font-size = !fs_24
-  :line-height = !lh
-
-h2
+  :margin 0 0 1em
   :font-size = !fs_18
   :line-height = !lh
 
-h3
+h2
   :font-size = !fs_14
+  :line-height = !lh
+
+h3
+  :font-size = !fs_12
   :line-height = !lh
 
 h4
@@ -34,9 +38,11 @@ h4
   :line-height = !lh
   :font-weight bold
 
+// paragraphs
 p
   :margin 0 0 1em
 
+// links
 a
   &:link, &:active, &:visited
     :color = !cs_a
@@ -66,6 +72,7 @@ ul li
 
 ol li
   :list-style inside decimal none
+
 
 // tables
 table
