fix image replacement background add mixin reset_list

--- a/inc/_mixins.sass
+++ b/inc/_mixins.sass
@@ -31,7 +31,7 @@
     :position absolute
     :left 0px
     :top 0px
-    :background transparent no-repea left top
+    :background transparent no-repeat left top
 
 
 // hidden element 
@@ -39,3 +39,11 @@
 =hidden
   :position absolute
   :left -1000em
+
+
+// reset default list styles
+=reset_list
+  :margin 0
+  :padding 0
+  li  
+    :list-style outside none none
