--- a/inc/_variables.sass
+++ b/inc/_variables.sass
@@ -1,3 +1,6 @@
+// Declaring styles variables.
+
+
 // Font scale 
 // !!! should be used when parent container has font-size: 1em 
 !fs_11 = .916em
@@ -7,14 +10,22 @@
 !fs_21 = 1.75em
 !fs_24 = 2em
 
-// font family 
+// Font family 
+// default
 !ff_d = Verdana,Arial,sans   
+// heading
 !ff_h = Helvetica,Verdana,Arial,sans   
 
-!lh = 1.5em  
+// line-height
+!lh = 1.33em  
 
-// default colorscheme
-!cs_d   = #333      
+
+// Colorscheme
+// default
+!cs_d   = #333
+// heading
 !cs_h   = #111       
+// links
 !cs_a   = #666666  
+// links hover
 !cs_ah  = #999   
