added Leahy/Langridge Method for image replacement( =ir_ll ). I know ;)

--- a/inc/_mixins.sass
+++ b/inc/_mixins.sass
@@ -33,6 +33,16 @@
     :top 0px
     :background transparent no-repeat left top
 
+// image replacement
+// Leahy/Langridge method
+=ir_ll
+  :display block
+  :padding 0
+  :overflow hidden
+  :height 0px
+  :background transparent no-repeat left top
+
+
 
 // hidden element 
 // - used for accessibility in place of display:none
