--- a/inc/_variables.sass
+++ b/inc/_variables.sass
@@ -1,31 +1,36 @@
-// Declaring styles variables.
+// Sass global variables
+
+// Global
+!images_url     = "../images/"
+!images_abs_url = "/images/"
 
 
-// Font scale 
-// !!! should be used when parent container has font-size: 1em 
-!fs_11 = .916em
-!fs_12 = 1em
-!fs_14 = 1.16em
-!fs_18 = 1.5em
-!fs_21 = 1.75em
-!fs_24 = 2em
+// Typography
 
-// Font family 
-// default
-!ff_d = Verdana,Arial,sans   
-// heading
-!ff_h = Helvetica,Verdana,Arial,sans   
+// Base font size
+!font_base      = 12
 
-// line-height
-!lh = 1.33em  
+// Default font family
+!ff_d           = Verdana,Arial,sans-serif
+// Heading font family
+!ff_h           = Helvetica,Verdana,Arial,sans-serif
+// Default line height
+!lh             = 1.33em
 
 
 // Colorscheme
-// default
-!cs_d   = #333
-// heading
-!cs_h   = #111       
-// links
-!cs_a   = #666666  
-// links hover
-!cs_ah  = #999   
+
+// Default body color
+!cs_d           = #333
+
+// Default background color
+!cs_bg          = #FFF
+
+// Heading color
+!cs_h           = #111       
+
+// Links color
+!cs_a           = #666666  
+
+// Links hover color
+!cs_ah          = #999   
