--- a/inc/_layout.sass
+++ b/inc/_layout.sass
@@ -1,29 +1,16 @@
-#accessibility-nav
+// Skip links
+#nav-accessibility
   +hidden
 
-#page
-  :width 80em
-  :margin 0 auto
-  :text-align left
-
-
-// header
 #header
-  :padding 1em 0
 
-// container
 #container
   +clearfix
-  :padding 1em
 
 #content
   :float left
-  :width 50em
 
 #aside
   :float right
-  :width 26em
 
-// footer
 #footer
-  :padding 1em
