--- a/inc/_default.sass
+++ b/inc/_default.sass
@@ -1,3 +1,7 @@
+/* -2- Default styles
+  ----------------------------------------------------------------------------------------------------
+
+/* Base
 html
   :font-size medium
 
@@ -14,13 +18,14 @@ body
 
 /* Headings
 h1, h2, h3, h4
-  :margin       0
+  :margin       1em 0 0
   :color        = !cs_h
   :font       
     :family     = !ff_h
     :weight     bold
 
 h1
+  :margin 0 
   +font_scale(24)
 
 h2
@@ -57,6 +62,10 @@ button
   :color        = !cs_d
   :font         = normal normal normal 1em/!lh !ff_d
 
+button
+  :cursor pointer
+
+
 /* Lists
 ul, 
 ol, 
@@ -72,6 +81,7 @@ ol li
 dd
   :margin-left  1em
 
+
 /* Tables
 table
   :width 100%
@@ -84,6 +94,7 @@ table
     :font-weight  bold
     :text-align   left
 
+
 /* Others
 hr
   :display        none
@@ -91,6 +102,13 @@ hr
 quote
   :font-style     italic
 
-blockquote
+ins
+	:text-decoration none
+
+del
+	:text-decoration line-through
+
+blockquote,
+quote
   :font-style     italic
 
