--- a/inc/_layout.sass
+++ b/inc/_layout.sass
@@ -1,3 +1,6 @@
+/* -3- Layout
+  ----------------------------------------------------------------------------------------------------
+
 // Skip links
 #nav-accessibility
   +hidden
@@ -5,12 +8,9 @@
 #header
 
 #container
-  +clearfix
 
 #content
-  :float left
 
 #aside
-  :float right
 
 #footer
