--- a/inc/_variables.sass
+++ b/inc/_variables.sass
@@ -1,9 +1,8 @@
 // Sass global variables
 
-// Global
+// Variables
 !images_url     = "../images/"
 !images_abs_url = "/images/"
-
 
 // Typography
 
@@ -11,26 +10,25 @@
 !font_base      = 12
 
 // Default font family
-!ff_d           = Verdana,Arial,sans-serif
+!ff_d           = "Verdana,Arial,sans-serif"
 // Heading font family
-!ff_h           = Helvetica,Verdana,Arial,sans-serif
+!ff_h           = "Helvetica,Verdana,Arial,sans-serif"
 // Default line height
-!lh             = 1.33em
-
+!lh             = "1.33em"
 
 // Colorscheme
 
 // Default body color
-!cs_d           = #333
+!cs_d           = "#333"
 
 // Default background color
-!cs_bg          = #FFF
+!cs_bg          = "#FFF"
 
 // Heading color
-!cs_h           = #111       
+!cs_h           = "#111"     
 
 // Links color
-!cs_a           = #666666  
+!cs_a           = "#666666"
 
 // Links hover color
-!cs_ah          = #999   
+!cs_ah          = "#999"
