--- a/inc/_reset.sass
+++ b/inc/_reset.sass
@@ -1,25 +1,25 @@
 /* -1- CSS Reset - Eric Mayer v1.0 | 20080212 - http//meyerweb.com/eric/tools/css/reset/
   ----------------------------------------------------------------------------------------------------
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td 
-  :margin 0 
-  :padding 0 
-  :border 0 
-  :outline 0
-  :background transparent
-  :font-size 100%
-  :vertical-align baseline
+  margin: 0 
+  padding: 0 
+  border: 0 
+  outline: 0
+  background: transparent
+  font-size: 100%
+  vertical-align: baseline
 
 blockquote,
 q
-  :quotes none
+  quotes: none
 
 blockquotebefore,
 blockquoteafter,
 qbefore,
 qafter
-  :content ''
-  :content none
+  content: ''
+  content: none
 
 table
-  :border-collapse collapse
-  :border-spacing 0
+  border-collapse: collapse
+  border-spacing: 0
