--- a/inc/_variables.sass
+++ b/inc/_variables.sass
@@ -1,34 +1,32 @@
 // Sass global variables
 
 // Variables
-!images_url     = "../images/"
-!images_abs_url = "/images/"
+// relative path to images folder
+!img_url        = "../images/"
+// absolute path to images folder
+!img_abs_url    = "/images/"
+
 
 // Typography
 
-// Base font size
-!font_base      = 12
-
+// Base font size (px)
+!font_base            = 12
 // Default font family
-!ff_d           = "Verdana,Arial,sans-serif"
-// Heading font family
-!ff_h           = "Helvetica,Verdana,Arial,sans-serif"
+!font_family          = "Verdana,Arial,sans-serif"
 // Default line height
-!lh             = "1.33em"
+!font_line_height     = "1.33em"
+s_d
 
 // Colorscheme
 
 // Default body color
-!cs_d           = "#333"
+!color                = "#333"
 
 // Default background color
-!cs_bg          = "#FFF"
+!color_background     = "#FFF"
 
 // Heading color
-!cs_h           = "#111"     
+!color_header         = "#111"     
 
-// Links color
-!cs_a           = "#666666"
-
-// Links hover color
-!cs_ah          = "#999"
+// Link color
+!color_link           = "#001e96"
