Restructure mixins & imported files

--- a/screen.sass
+++ b/screen.sass
@@ -1,19 +1,19 @@
 // Main sass file
 
 // reset - Eric Mayer: http://meyerweb.com/eric/tools/css/reset/
-@import inc/_reset.sass
+@import lib/_reset.sass
 
 // variables - define specific variables to use on other sass files
-@import inc/_variables.sass
+@import lib/_variables.sass
 
 // mixins - declared elements
-@import inc/_mixins.sass
+@import lib/_mixins.sass
 
 // default styles
-@import inc/_default.sass
+@import lib/_default.sass
 
 // common elements
-@import inc/_common.sass
+@import lib/_common.sass
 
 // layout elements
-@import inc/_layout.sass
+@import lib/_layout.sass
