--- a/lib/_variables.sass
+++ b/lib/_variables.sass
@@ -1,31 +1,34 @@
 // Sass global variables
 
 // relative path to images folder
-!img_url        = "../images/"
+$img_url:           "../images/"
+
 // absolute path to images folder
-!img_abs_url    = "/images/"
+$img_abs_url:       "/images/"
 
 
 // Typography
 
 // Base font size (px)
-!font_base            = 12
+$font_base:         12
+
 // Default font family
-!font_family          = "Verdana,Arial,sans-serif"
+$font_family:       "Verdana,Arial,sans-serif"
+
 // Default line height
-!font_line_height     = "1.33em"
+$font_line_height:  1.3
 
 
 // Colorscheme
 
 // Default body color
-!color                = "#333"
+$color:             #333
 
 // Default background color
-!color_background     = "#FFF"
+$color_background:  #FFF
 
 // Heading color
-!color_header         = "#111"     
+$color_header:      #111
 
 // Link color
-!color_link           = "#001e96"
+$color_link:        #001e96
