--- a/lib/_common.sass
+++ b/lib/_common.sass
@@ -1,1 +1,44 @@
-null
+// Clearfix methood
+//   http://www.positioniseverything.net/easyclearing.html
+.clearfix
+  &:after
+    content:    "."
+    display:    block
+    height:     0
+    clear:      both
+    visibility: hidden
+
+// Hide element 
+//   used for accessibility in place of display:none
+//   http://css-discuss.incutio.com/?page=ScreenreaderVisibility
+.hidden
+  position:     absolute
+  left:         -1000em
+  text-align:   left
+
+// Image replacement common styles - Phark method
+.ir
+  display:      block
+  overflow:     hidden
+  text-align:   left
+  text-indent:  -1000em
+
+// Image replacement common styles - Gilder method
+.ir_ext
+  display:      block
+  overflow:     hidden
+  position:     relative
+
+  span
+    width:      100%
+    height:     100%
+    display:    block
+    position:   absolute
+    left:       0px
+    top:        0px
+
+// Image replacement common styles - Leahy/Langridge method
+.ir_ll
+  display:    block
+  height:     0px
+  overflow:   hidden
