--- a/lib/mixins/_typography.sass
+++ b/lib/mixins/_typography.sass
@@ -1,5 +1,5 @@
 // Scale font based on current font_size
-=font_scale(!_size, !_base = !font_base, !_line_height = !font_line_height )
-  font-size:    #{!_size/!_base}em
-  line-height:  #{!_line_height}
+@mixin font_scale($size, $base: $font_base, $line_height:  $font_line_height )
+  font-size:    #{$size/$base}em
+  line-height:  $line_height
 
