reset HTML5 tags

--- a/lib/_reset.sass
+++ b/lib/_reset.sass
@@ -1,6 +1,7 @@
 /* -1- CSS Reset - Eric Mayer v1.0 | 20080212 - http//meyerweb.com/eric/tools/css/reset/
   ----------------------------------------------------------------------------------------------------
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td 
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, dialog, figure, footer, header, hgroup, menu, nav, section, menu, time, mark, audio, video
   margin: 0 
   padding: 0 
   border: 0 
@@ -18,6 +19,13 @@ q
     content: ''
     content: none
 
+
+article, aside, dialog, figure, footer, header, hgroup, nav, section
+  display: block
+
 table
   border-collapse: collapse
   border-spacing: 0
+
+abbr[title], dfn[title]
+  cursor: help
